# syf-lyra

./: docker-compose.yml
backend/: .env  pyproject.toml
backend/app/: app.py  config.py  database.py  dependencies.py
backend/app/auth/: router.py  security.py
backend/app/comments/: crud.py  router.py  schemas.py
backend/app/issues/: crud.py  git_router.py  git_schemas.py  router.py  schemas.py
backend/app/labels/: crud.py  router.py  schemas.py
backend/app/members/: router.py
backend/app/models/: __init__.py  base.py  comment.py  git_commit.py  git_pull_request.py  issue.py  label.py  notification.py  project.py  user.py  workspace.py
backend/app/notifications/: crud.py  router.py  schemas.py
backend/app/projects/: crud.py  router.py  schemas.py
backend/app/users/: crud.py  router.py  schemas.py
backend/app/webhooks/: handler.py  parser.py  router.py  signature.py
backend/app/websockets/: manager.py  router.py
backend/app/workspaces/: crud.py  router.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 5021f9f71246_add_sequence_number_to_issues.py  5653e1b296d1_add_joined_at_to_workspace_members.py  5fb5e028827a_initial.py  b70ec5e04096_add_git_pull_requests_and_commits.py
docs/: database_schema.puml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  comments.ts  git.ts  issues.ts  labels.ts  members.ts  notifications.ts  projects.ts  workspaces.ts
frontend/src/components/: AppShell.tsx  Breadcrumb.tsx  CommandPalette.tsx  (+8 more)
(+13 files in other folders)
